k8s/candidate-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: candidate-api-deployment
  labels:
    app: candidate-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: candidate-api
  template:
    metadata:
      labels:
        app: candidate-api
    spec:
      containers:
      - name: candidate-api
        image: "#{ACR}#/candidate-api"
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: candidate-api
spec:
  selector:
    app: candidate-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
