k8s/recruiter-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recruiter-api-deployment
  labels:
    app: recruiter-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recruiter-api
  template:
    metadata:
      labels:
        app: recruiter-api
    spec:
      containers:
      - name: recruiter-api
        image:  "#{ACR}#/recruiter-api"
        ports:
        - containerPort: 3000
        - containerPort: 4000
---

apiVersion: v1
kind: Service
metadata:
  name: recruiter-api
spec:
  selector:
    app: recruiter-api
  ports:
    - name: app-port
      protocol: TCP
      port: 3000
      targetPort: 3000

    - name: ms-port 
      protocol: TCP
      port: 4000
      targetPort: 4000
