k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobify-gateway
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/cluster-issuer: #{CLUSTER_ISSUER}#
spec:
  tls:
    - hosts:
      - #{HOST}#
      secretName: #{SECRET_NAME}#
  rules:
  - host: #{HOST}#
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: auth-api
            port:
              number: 3000
